--- a/day-2/apps/.gitignore
+++ b/day-2/apps/.gitignore
@@ -15,3 +15,20 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+# Yarn
+.yarn/*
+!.yarn/releases
+!.yarn/patches
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+!.yarn/cache
+.pnp.*
+
+# Misc
+.DS_Store
+
+# IDE
+.vscode
+.idea
